generalize the job redirection code
make ready for when behind a http proxy