@@ -13,6 +13,7 @@ import jakarta.inject.Singleton;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 import org.javastro.ivoa.entities.resource.Capability;
 import org.javastro.ivoa.entities.vosi.capabilities.Capabilities;
+import org.javastro.ivoacore.common.ServiceLocator;
 import org.javastro.ivoacore.tap.TAPJob;
 import org.javastro.ivoacore.tap.schema.SchemaProvider;
 import org.javastro.ivoacore.tap.schema.VODMLSchemaProvider;
@@ -28,6 +29,7 @@ import javax.sql.DataSource;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.util.List;
@@ -48,8 +50,19 @@ public class TapConfiguration {
    boolean isDbCaseSensitive;
 
    @ConfigProperty(name="ivoa.baseAddress", defaultValue = "http://localhost:8080/")
-   URL baseUrl;
+   URI baseURI;
 
+
+   @Produces
+   @Singleton
+   ServiceLocator serviceLocator() {
+      return new ServiceLocator() {
+         @Override
+         public URI serviceURI() {
+            return baseURI;
+         }
+      };
+   }
 
    @Produces
    @Singleton
@@ -59,10 +72,10 @@ public class TapConfiguration {
          public Capabilities getCapabilities() {
             URL url = null;
             try {
-               url = new URL(baseUrl, "VOSI");//IMPL - this needs to be the same as the root in {@see org.javastro.ivoa.tap.VOSIResource }
+               url = new URL(baseURI.toURL(), "VOSI");//IMPL - this needs to be the same as the root in {@see org.javastro.ivoa.tap.VOSIResource }
                // standard VOSI ones
                final List<Capability> capabilities = CapabilityBuilder.createVOSICapabilities(url);
-               capabilities.addAll(CapabilityBuilder.createTAPCapabilities(baseUrl));
+               capabilities.addAll(CapabilityBuilder.createTAPCapabilities(baseURI.toURL()));
 
                return Capabilities.builder().addCapabilities(capabilities).build();
             } catch (MalformedURLException e) {
